--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 <p>this is my second paragraph</p>
+<p>this is my third paragraph</p>
 </body>
 </html> 
